--- a/app/src/main/res/layout/activity_add_property.xml
+++ b/app/src/main/res/layout/activity_add_property.xml
@@ -7,7 +7,7 @@
     tools:context=".AddProperty">
 
     <android.support.v7.widget.Toolbar
-        android:id="@+id/addProp1"
+        android:id="@+id/addProp"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/colorPrimary"
@@ -32,7 +32,7 @@
         android:background="#FEFBFB"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/addProp1">
+        app:layout_constraintTop_toBottomOf="@+id/addProp">
 
         <android.support.constraint.ConstraintLayout
             android:layout_width="match_parent"
@@ -141,14 +141,12 @@
         android:id="@+id/money"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="34dp"
         android:layout_marginEnd="8dp"
         android:layout_marginLeft="8dp"
         android:layout_marginRight="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="32dp"
         android:background="#FEFBFB"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
